--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,8 @@ span{
 /* Search input */
 .inputBox_search{
     display: none;
-    position: absolute;
+    position: fixed;
+    z-index: 3;
     transform-origin: top;
     top: 7rem;
     right: 9rem;
@@ -563,20 +564,22 @@ span{
     height: 4rem;
     padding: 0 .5rem;
     margin: 0;
+    border-radius: 10px;
+
 }
-.inputBox_search input {
+.inputBox_search .inputBoxSearch {
     color: #000;
     padding: 0 .5rem;
 }
-.inputBox_search span {
+.inputBox_search .inputBox__span{
     color: #000;
 }
-.inputBox_search span:hover {
+.inputBox_search .inputBox__span:hover {
     color: var(--main-color);
 }
 /* Cart opened */
 .main__cart{
-    position: absolute;
+    position: fixed;
     height: 90vh;
     top: 10vh;
     right: 0;
@@ -585,6 +588,7 @@ span{
     text-align: center;
     display: none;
     z-index: 2;
+    transition: .4s;
 }
 .main__cart .main__cart-box {
     display: flex;
