--- a/css/style.css
+++ b/css/style.css
@@ -610,7 +610,7 @@ span{
     width: 100%;
     height: 100vh;
     background: var(--bg);
-    z-index: 1000;
+    z-index: 100;
     position: fixed;
     display: none;
     flex-direction: column;
@@ -629,7 +629,7 @@ span{
     margin: 0 auto;   
 }
 .mobile__nav li {
-    padding: 1rem 4rem;
+    padding: 1.25rem 4rem;
     margin: 1rem;
     border: var(--border);
     font-size: 1.5rem;
@@ -802,14 +802,14 @@ span{
     .blog .box__container .box{
         text-align: center;
     }
-    .main .inputBox{
+    .section .inputBox_search{
         height: 4.5rem;
         padding: 0 1.5rem;
         top: 13%;
         left: 5%;
         width: 90%;
     }
-    .main .inputBox input {
+    .main .inputBox .inputBoxSearch {
         display: inline;
     }
 }
