--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@
     outline: none; 
     border:none;
     text-decoration: none;
-    text-transform: capitalize;
 }
 
 html{
@@ -483,7 +482,8 @@ span{
     margin: 2rem;
     background-color: var(--bg);
     border: var(--border);
-    padding: 0 1.5rem; 
+    padding: 0 1.5rem;
+    position: relative;
 }
 .about__content .inputBox span {
     font-size: 1.3rem;
@@ -495,6 +495,48 @@ span{
     padding: 1.3rem;
     text-transform: none;
     font-size: 1.2rem;
+}
+
+.about__content .inputBox.success {
+    border: 1px solid #2ecc71;
+}
+.about__content .inputBox.error {
+    border: 1px solid #e74c3c;
+}
+
+.about__content .inputBox i {
+    position: absolute;
+    right: 2rem;
+    font-size: 1.5rem;
+    color: wheat;
+    visibility: hidden;
+}
+.about__content .inputBox.success i.fa-check-circle{
+    color: #2ecc71;
+    visibility: visible;
+}
+.about__content .inputBox.error i.fa-exclamation-circle{
+    color: #e74c3c;
+    visibility: visible;
+}
+.about__content .inputBox small {
+	color: #e74c3c;
+	position: absolute;
+	bottom: -1.3rem;
+	left: 0;
+	visibility: hidden;
+}
+
+.about__content .inputBox.error small {
+	visibility: visible;
+}
+.about__content .inputBox.success small {
+    color: #2ecc71;
+    visibility: visible;
+}
+.about__content .inputBox.error small{
+    color: #e74c3c;
+    visibility: visible;
 }
 
 /* Our Blogs */
@@ -786,7 +828,7 @@ span{
         margin: .2rem;
     }
     .inputBox{
-        margin: 1rem .5rem;
+        margin: 2rem .5rem !important;
         padding: 0 1.5rem; 
     }
     .inputBox input{
